--- a/template/index.tmpl
+++ b/template/index.tmpl
@@ -11,9 +11,9 @@
   </head>
 
   <body>
-    <h1>Hello World!</h1>
+    <h1>Search for a concept</h1>
     <form action="search" method="GET">
-      <input type="text" name="query">
+      <input type="text" name="query" autofocus>
       <input type="submit">
     </form>
   </body>
